samples/_failures_safe/1761541470_e7270a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c450a8e3.c: In function ‘main’:
./samples/SAFE/__tmp_c450a8e3.c:128:21: error: expected expression at end of input
  128 |                     long product = (
      |                     ^~~~
./samples/SAFE/__tmp_c450a8e3.c:128:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c450a8e3.c:128:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c450a8e3.c:128:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c450a8e3.c:128:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c450a8e3.c:128:21: error: expected declaration or statement at end of input
